trying to fix the generate animation problem on mobile, test deploying

--- a/public/styles.css
+++ b/public/styles.css
@@ -576,7 +576,7 @@
         margin:18px
     }
     #generate_txt{
-        margin-right: 1600px;
+        margin-right: 1590px;
         transition: 2s ease;
     }
     #loading_txt.loading{
